--- a/Debug/makefile
+++ b/Debug/makefile
@@ -62,7 +62,7 @@ main-build: week12.elf secondary-outputs
 
 # Tool invocations
 week12.elf: $(OBJS) $(USER_OBJS) D:\Works\ 63\FRA222\Week12_SPI_Class\Week12_SPI_Class\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "week12.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Works 63\FRA222\Week12_SPI_Class\Week12_SPI_Class\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="week12.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "week12.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Works 63\FRA222\Week12_SPI_Class\Week12_SPI_Class\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="week12.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
